# s.o.s

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: sync.yml
cmake/script/: check_files.sh
include/sos/: sos.hpp  sosDefine.hpp  sosType.hpp
include/sos/algorithm/: embed_optimized.cpp  embed_optimized.hpp  embed_simplified.cpp  embed_simplified.hpp  extract_optimized.cpp  extract_optimized.hpp  extract_simplified.cpp  extract_simplified.hpp
include/sos/tools/: convert.hpp  hash.hpp  noise.hpp  threshold.hpp
src/: nothing.cpp
src/sos/optimized/: embed_optimized.cpp  extract_optimized.cpp
src/sos/simplified/: embed_simplified.cpp  extract_simplified.cpp
src/sos/tools/: hash.cpp  noise.cpp  threshold.cpp
